# python-stm32cubeprog

./: LICENSE  README.md  pyproject.toml
examples/: linux.py
stm32cubeprog/: __init__.py  api.py
