[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-stm32cubeprog"
version = "0.1.0"
authors = [
  { name="Vincent Werner", email="vincent.werner@outlook.fr"},
]
description = "Python API for STM32CubeProgrammer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/wervin/python-stm32cubeprog"
"Bug Tracker" = "https://github.com/wervin/python-stm32cubeprog/issues"

[tool.hatch.build]
exclude = [
  ".env",
  ".gitignore",
  "examples",
  "dist"
]

[tool.hatch.build.targets.wheel]
packages = ["stm32cubeprog"]
